Re-arranged and added questions

--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,7 @@
 % \beamerdefaultoverlayspecification{<+->} % this will turn it into slides
 
 \title{Dockerisation}
-\subtitle{Container technologies, for ease of development and deployment}
+\subtitle{Reducing stress and making software easier}
 \author{George Onoufriou}
 \date{\today}
 
@@ -155,6 +155,16 @@ docker run --gpus all -it some/tag nvidia-smi
   \end{frame}
 
   \begin{frame}
+    \frametitle{Docker-Compose}
+    \begin{itemize}
+        \item Helps reduce command line arguments
+        \item Allows source control
+        \item Example docker compose included with this presentation
+        \item I will now demonstrate ...
+    \end{itemize}
+  \end{frame}
+
+  \begin{frame}
     \frametitle{Docker Zero to Dev}
     \begin{itemize}
       \item Docker (single container)
@@ -168,7 +178,7 @@ docker run --gpus all -it some/tag nvidia-smi
   \end{frame}
 
   \begin{frame}
-    \frametitle{Docker-Compose}
+      \frametitle{Questions}
   \end{frame}
 
   \begin{frame}[allowframebreaks]
