Added url back to the source code

--- a/main.tex
+++ b/main.tex
@@ -179,6 +179,7 @@ docker run --gpus all -it some/tag nvidia-smi
 
   \begin{frame}
       \frametitle{Questions}
+      \url{https://github.com/DreamingRaven/2020-docker-talk}
   \end{frame}
 
   \begin{frame}[allowframebreaks]
